@@ -3,8 +3,11 @@ from decimal import Decimal
 
 from trytond.pool import PoolMeta
 
+from trytond.modules.cog_utils import utils, fields
+
 __all__ = [
     'InvoiceLine',
+    'Invoice',
     ]
 __metaclass__ = PoolMeta
 
@@ -30,3 +33,20 @@ class InvoiceLine:
         if commission_amount:
             return commission_amount.quantize(
                 Decimal(str(10.0 ** -self.currency_digits)))
+
+
+class Invoice:
+    __name__ = 'account.invoice'
+
+    is_commission_invoice = fields.Function(
+        fields.Boolean('Is Commission Invoice'),
+        'get_is_commission_invoice')
+
+    def _get_move_line(self, date, amount):
+        line = super(Invoice, self)._get_move_line(date, amount)
+        if self.is_commission_invoice:
+            line['payment_date'] = utils.today()
+        return line
+
+    def get_is_commission_invoice(self, name):
+        return self.party.is_broker and self.type == 'in_invoice'
