@@ -5,6 +5,7 @@ depends:
     cog_utils
     product_cog
     contract_insurance_invoice
+    account_payment_cog
     commission
     distribution
 xml:
@@ -12,3 +13,4 @@ xml:
     contract.xml
     commission.xml
     party.xml
+    payment.xml
