@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/field[@name='reject_fee_journal']"
+        position="after">
+        <newline/>
+        <label name="broker_bank_transfer_journal"/>
+        <field name="broker_bank_transfer_journal"/>
+        <label name="broker_check_journal"/>
+        <field name="broker_check_journal"/>
+    </xpath>
+</data>
